--- a/elvenworks/ansible/roles/wordpress/templates/wp-config.php.j2
+++ b/elvenworks/ansible/roles/wordpress/templates/wp-config.php.j2
@@ -33,10 +33,10 @@ define( 'DB_NAME', 'wordpress' );
 define( 'DB_USER', 'wpuser' );
 
 /** Database password (Altere em caso de producao)*/
-define( 'DB_PASSWORD', 'Wp-13579' );
+define( 'DB_PASSWORD', 'Wp-123mudar' );
 
 /** Database hostname */
-define( 'DB_HOST', 'terraform-20220923071841099000000002.comqekqqhabr.us-east-2.rds.amazonaws.com' );
+define( 'DB_HOST', 'terraform-20220924004800732100000001.comqekqqhabr.us-east-2.rds.amazonaws.com' );
 
 /** Database charset to use in creating database tables. */
 define( 'DB_CHARSET', 'utf8' );
