--- a/elvenworks/ansible/roles/wordpress/templates/robsonproject.daredelabs.com.br.conf.j2
+++ b/elvenworks/ansible/roles/wordpress/templates/robsonproject.daredelabs.com.br.conf.j2
@@ -1,7 +1,7 @@
 server {
   listen 80;
   listen [::]:80;
-  server_name robsonproject.daredelabs.com.br daredelabs.com.br;
+  server_name robsonproject.daredelabs.com.br robsonproject.daredelabs.com.br;
   root /var/www/html/wordpress/;
   index index.php index.html index.htm index.nginx-debian.html;
 
